@@ -1122,6 +1122,7 @@ internal object AndroidPreviewSupport {
 
         jvmArgs(agpTestTask?.jvmArgs ?: emptyList<String>())
         jvmArgs(
+          "--add-opens=java.base/java.io=ALL-UNNAMED",
           "--add-opens=java.base/java.lang=ALL-UNNAMED",
           "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
           "--add-opens=java.base/java.nio=ALL-UNNAMED",
